src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_vdot_out(value out, value self, value other);
value atg_view(value self, value size);
value atg_view_as(value self, value other);
value atg_view_as_complex(value self);
value atg_view_as_complex_copy(value self);
value atg_view_as_complex_copy_out(value out, value self);
value atg_view_as_real(value self);
value atg_view_as_real_copy(value self);
value atg_view_as_real_copy_out(value out, value self);
value atg_view_copy(value self, value size);
value atg_view_copy_dtype(value self, int dtype);
value atg_view_copy_dtype_out(value out, value self, int dtype);
value atg_view_copy_out(value out, value self, value size);
value atg_view_dtype(value self, int dtype);
value atg_vsplit(value self, int64_t sections);
value atg_vsplit_array(value self, value indices);
value atg_vstack(value tensors);
value atg_vstack_out(value out, value tensors);
value atg_where(value condition);
value atg_where_scalar(value condition, value self, value other);
value atg_where_scalarother(value condition, value self, value other);
value atg_where_scalarself(value condition, value self, value other);
value atg_where_self(value condition, value self, value other);
value atg_where_self_out(value out, value condition, value self, value other);
value atg_xlogy(value self, value other);
value atg_xlogy_(value self, value other);
value atg_xlogy_outscalar_other(value out, value self, value other);
value atg_xlogy_outscalar_self(value out, value self, value other);
value atg_xlogy_outtensor(value out, value self, value other);
value atg_xlogy_scalar_other(value self, value other);
value atg_xlogy_scalar_other_(value self, value other);
value atg_xlogy_scalar_self(value self, value other);
value atg_zero(value self);
value atg_zero_(value self);
value atg_zero_out(value out, value self);
value atg_zeros(value size, int options_kind, int options_device);
value atg_zeros_like(value self);
value atg_zeros_like_out(value out, value self);
value atg_zeros_out(value out, value size);