src/bindings/torch_bindings_generated7.ml


  let stubs_vdot_out =
    foreign "atg_vdot_out" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_view =
    foreign "atg_view" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_view_as =
    foreign "atg_view_as" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_view_as_complex =
    foreign "atg_view_as_complex" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_view_as_complex_copy =
    foreign "atg_view_as_complex_copy" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_view_as_complex_copy_out =
    foreign
      "atg_view_as_complex_copy_out"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_view_as_real = foreign "atg_view_as_real" (gc_tensor @-> returning raw_tensor)

  let stubs_view_as_real_copy =
    foreign "atg_view_as_real_copy" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_view_as_real_copy_out =
    foreign "atg_view_as_real_copy_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_view_copy =
    foreign "atg_view_copy" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_view_copy_dtype =
    foreign "atg_view_copy_dtype" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_view_copy_dtype_out =
    foreign
      "atg_view_copy_dtype_out"
      (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_view_copy_out =
    foreign
      "atg_view_copy_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_view_dtype =
    foreign "atg_view_dtype" (gc_tensor @-> int @-> returning raw_tensor)
  ;;
end

module C3 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_vsplit =
    foreign "atg_vsplit" (gc_tensor @-> int64_t @-> returning (ptr raw_tensor))
  ;;

  let stubs_vsplit_array =
    foreign
      "atg_vsplit_array"
      (gc_tensor @-> ptr int64_t @-> int @-> returning (ptr raw_tensor))
  ;;

  let stubs_vstack = foreign "atg_vstack" (ptr gc_tensor @-> int @-> returning raw_tensor)

  let stubs_vstack_out =
    foreign "atg_vstack_out" (gc_tensor @-> ptr gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_where = foreign "atg_where" (gc_tensor @-> returning (ptr raw_tensor))

  let stubs_where_scalar =
    foreign "atg_where_scalar" (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_where_scalarother =
    foreign
      "atg_where_scalarother"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_where_scalarself =
    foreign
      "atg_where_scalarself"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_where_self =
    foreign
      "atg_where_self"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_where_self_out =
    foreign
      "atg_where_self_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_xlogy = foreign "atg_xlogy" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_xlogy_ =
    foreign "atg_xlogy_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_xlogy_outscalar_other =
    foreign
      "atg_xlogy_outscalar_other"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_xlogy_outscalar_self =
    foreign
      "atg_xlogy_outscalar_self"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_xlogy_outtensor =
    foreign
      "atg_xlogy_outtensor"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_xlogy_scalar_other =
    foreign "atg_xlogy_scalar_other" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_xlogy_scalar_other_ =
    foreign "atg_xlogy_scalar_other_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_xlogy_scalar_self =
    foreign "atg_xlogy_scalar_self" (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_zero = foreign "atg_zero" (gc_tensor @-> returning raw_tensor)
  let stubs_zero_ = foreign "atg_zero_" (gc_tensor @-> returning raw_tensor)

  let stubs_zero_out =
    foreign "atg_zero_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_zeros =
    foreign "atg_zeros" (ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_zeros_like = foreign "atg_zeros_like" (gc_tensor @-> returning raw_tensor)

  let stubs_zeros_like_out =
    foreign "atg_zeros_like_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_zeros_out =
    foreign "atg_zeros_out" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;
end

module C (F : Cstubs.FOREIGN) = struct
  include C0 (F)
  include C1 (F)
  include C2 (F)
  include C3 (F)
end
